# pytest-drf

./: README.md  main.py  pyproject.toml
core/: settings.py
tests/: test_ex1.py  test_ex2.py  test_ex3.py  test_ex4.py
